--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="8dp"
     app:cardCornerRadius="2dp"
     app:cardElevation="0dp"
-    app:cardUseCompatPadding="true"
-    android:layout_margin="8dp">
+    app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,18 +16,18 @@
 
         <ImageView
             android:id="@+id/image_view"
-            android:contentDescription="@string/image_view_description"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_margin="8dp"
-            android:background="@drawable/ic_black_border" />
+            android:background="@drawable/ic_black_border"
+            android:contentDescription="@string/image_view_description" />
 
         <TextView
             android:id="@+id/text_view_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
             android:layout_toEndOf="@id/image_view"
             android:textSize="16sp"
             tools:text="ID" />
@@ -37,11 +37,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:layout_marginTop="34dp"
             android:layout_toEndOf="@id/image_view"
             android:textSize="18sp"
             android:textStyle="bold"
-            tools:text="Amount"
-            android:layout_marginTop="34dp"/>
+            tools:text="Amount" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
