--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,17 +2,17 @@
 <resources>
     <color name="colorPrimary">#018A9A</color>
     <color name="colorStatusBar">#388DFB</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="colorHeader">#70C0FF</color>
 
-    <color name="colorActiveButtonBackground">#369CE1</color>
-    <color name="colorActiveButtonText">#F2F3F3</color>
-    <color name="colorActiveButtonBackgroundPressed">#0D629C</color>
+    <color name="colorActiveButtonBackground">@color/colorPrimary</color>
+    <color name="colorActiveButtonText">@color/colorAccent</color>
+    <color name="colorActiveButtonBackgroundPressed">#027F8E</color>
     <color name="colorInactiveButtonBackground">#BEBFBF</color>
     <color name="colorInactiveButtonText">#2E2929</color>
 
     <color name="colorDarkText">#BEBEBE</color>
-    <color name="colorLightText">#369CE1</color>
+    <color name="colorLightText">@color/colorPrimary</color>
 
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
