--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
-        <item name="colorAccent">@color/white</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -14,13 +14,13 @@
 
     <style name="CustomSwitch" parent="Theme.AppCompat.Light">
         <!-- active thumb & track color (30% transparency) -->
-        <item name="colorControlActivated">#369CE1</item>
+        <item name="colorControlActivated">@color/colorPrimary</item>
 
         <!-- inactive thumb color -->
-        <item name="colorSwitchThumbNormal">#369CE1</item>
+        <item name="colorSwitchThumbNormal">@color/colorPrimary</item>
 
         <!-- inactive track color (30% transparency) -->
-        <item name="android:colorForeground">#369CE1</item>
+        <item name="android:colorForeground">@color/colorPrimary</item>
     </style>
 
 </resources>
