--- a/app/src/main/res/layout/dialog_insert_person.xml
+++ b/app/src/main/res/layout/dialog_insert_person.xml
@@ -37,6 +37,7 @@
             android:hint="@string/hnt_persons_name"
             android:importantForAutofill="no"
             android:inputType="text"
+            android:maxLength="30"
             android:scrollbars="vertical"
             android:textSize="24sp" />
 
