--- a/app/src/main/res/layout/card_person.xml
+++ b/app/src/main/res/layout/card_person.xml
@@ -25,7 +25,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/ic_black_border"
-                android:contentDescription="@string/iv_desc_dir" />
+                android:contentDescription="@string/iv_desc_status" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
