--- a/app/src/main/res/layout/dialog_add_person.xml
+++ b/app/src/main/res/layout/dialog_add_person.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -11,15 +11,16 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/message_tv"
+            android:id="@+id/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
+            android:text="@string/msg_add"
             android:textAlignment="center"
+            android:textColor="@color/colorPrimary"
             android:textSize="20sp"
-            android:textStyle="bold"
-            tools:text="Message" />
+            android:textStyle="bold" />
 
     </FrameLayout>
 
@@ -27,19 +28,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/et_name"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
             android:hint="@string/hnt_persons_name"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:maxLength="30"
-            android:scrollbars="vertical"
-            android:textSize="24sp" />
+            app:counterEnabled="true"
+            app:counterMaxLength="20">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorPrimary"
+                android:inputType="textPersonName"
+                android:maxLength="20"
+                android:textSize="24sp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
@@ -87,7 +95,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/button_add"
+            android:id="@+id/btn_add"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
