--- a/app/src/main/res/layout/dialog_person_add.xml
+++ b/app/src/main/res/layout/dialog_person_add.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tv_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -28,11 +27,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/til_name"
+            android:id="@+id/dialog_person_add_til_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hnt_persons_name"
@@ -59,7 +57,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/tv_i_owe"
+            android:id="@+id/dialog_person_add_tv_i_owe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
@@ -70,7 +68,7 @@
             android:textSize="24sp" />
 
         <Switch
-            android:id="@+id/sw"
+            android:id="@+id/dialog_person_add_sw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="6dp"
@@ -79,7 +77,7 @@
         </Switch>
 
         <TextView
-            android:id="@+id/tv_owe_me"
+            android:id="@+id/dialog_person_add_tv_owe_me"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
@@ -95,7 +93,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/btn_add"
+            android:id="@+id/dialog_person_add_btn_add"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
