--- a/app/src/main/res/layout/fragment_person_list.xml
+++ b/app/src/main/res/layout/fragment_person_list.xml
@@ -2,10 +2,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray">
+    android:background="@color/colorLightGray">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/fragment_person_list_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
