--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,11 +14,11 @@
     <color name="colorDarkText">#BEBEBE</color>
     <color name="colorLightText">@color/colorPrimary</color>
 
-    <color name="white">#FFFFFF</color>
-    <color name="black">#000000</color>
-    <color name="gray">#DFDFDF</color>
-    <color name="light_gray">#E2E2E2</color>
-    <color name="red">#F44336</color>
-    <color name="green">#5DCF61</color>
-    <color name="blue">#2196F3</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorGray">#DFDFDF</color>
+    <color name="colorLightGray">#E2E2E2</color>
+    <color name="colorRed">#F44336</color>
+    <color name="colorGreen">#5DCF61</color>
+    <color name="colorBlue">#2196F3</color>
 </resources>
