--- a/app/src/main/res/layout/dialog_entry_add.xml
+++ b/app/src/main/res/layout/dialog_entry_add.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -14,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:text="@string/tv_msg_person_add"
+            android:text="@string/tv_msg_entry_add"
             android:textAlignment="center"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp"
@@ -29,53 +30,25 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/dialog_person_add_et_name"
+            android:id="@+id/dialog_entry_add_et_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary"
-            android:hint="@string/hnt_person_name"
+            android:hint="@string/hnt_entry_amount"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
-            android:maxLength="15"
+            android:inputType="numberDecimal"
+            android:maxLength="6"
             android:textSize="24sp" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/dialog_person_add_tv_i_owe"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/dialog_entry_add_et_comment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="@string/tv_i_owe"
-            android:textAlignment="textEnd"
-            android:textColor="@color/colorLightText"
-
-            android:textSize="24sp" />
-
-        <Switch
-            android:id="@+id/dialog_person_add_sw"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="6dp"
-            android:theme="@style/CustomSwitch">
-
-        </Switch>
-
-        <TextView
-            android:id="@+id/dialog_person_add_tv_owe_me"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:text="@string/tv_owes_me"
-            android:textAlignment="textStart"
-            android:textColor="@color/colorDarkText"
+            android:backgroundTint="@color/colorPrimary"
+            android:hint="@string/hnt_entry_comment"
+            android:importantForAutofill="no"
+            android:inputType="text"
+            android:maxLength="30"
             android:textSize="24sp" />
 
     </LinearLayout>
@@ -85,7 +58,7 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/dialog_person_add_btn_add"
+            android:id="@+id/dialog_entry_add_btn_add"
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
