added Delete Person Option (onClick + Dialog dialog_person_del.xml). locked activities orientation to Portrait Mode.

--- a/app/src/main/res/layout/dialog_person_add.xml
+++ b/app/src/main/res/layout/dialog_person_add.xml
@@ -16,6 +16,7 @@
             android:layout_margin="10dp"
             android:text="@string/tv_msg_person_add"
             android:textAlignment="center"
+            android:textAllCaps="true"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:textStyle="bold" />
