--- a/app/src/main/res/layout/dialog_entry_add.xml
+++ b/app/src/main/res/layout/dialog_entry_add.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -17,6 +16,7 @@
             android:layout_margin="10dp"
             android:text="@string/tv_msg_entry_add"
             android:textAlignment="center"
+            android:textAllCaps="true"
             android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:textStyle="bold" />
