adjusted color scheme & text sizes

--- a/app/src/main/res/layout/activity_person_list.xml
+++ b/app/src/main/res/layout/activity_person_list.xml
@@ -11,31 +11,46 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            android:orientation="horizontal">
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/activity_person_list_tv_total_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="@dimen/appbar_padding"
-                android:textColor="@color/colorWhite"
+                android:layout_marginStart="5dp"
+                android:textColor="@color/colorAccent"
                 android:textSize="24sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Total Amount" />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/activity_person_list_iv_info"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:clickable="true"
+                android:contentDescription="@string/iv_desc_info"
+                android:src="@drawable/ic_info"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/activity_person_list_tl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            app:tabTextColor="@color/colorWhite" />
+            app:tabTextColor="@color/colorAccent"
+            app:tabIndicatorHeight="5dp"/>
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/activity_person_list_vp"
