--- a/app/src/main/res/layout/activity_entry_list.xml
+++ b/app/src/main/res/layout/activity_entry_list.xml
@@ -20,8 +20,8 @@
             android:id="@+id/activity_entry_list_tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:textSize="28sp"
+            android:textColor="@color/colorAccent"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -33,13 +33,13 @@
             android:layout_width="38dp"
             android:layout_height="38dp"
             android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:layout_toEndOf="@id/activity_entry_list_tv_name"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:contentDescription="@string/iv_desc_person_delete"
             android:src="@drawable/ic_delete"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,8 +56,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/colorWhite"
-            android:textSize="20sp"
+            android:textColor="@color/colorAccent"
+            android:textSize="16sp"
             tools:text="Status" />
 
         <TextView
@@ -65,23 +65,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textColor="@color/colorWhite"
-            android:textSize="40sp"
+            android:textColor="@color/colorAccent"
+            android:textSize="32sp"
+            android:textStyle="bold"
             tools:text="Amount" />
 
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/activity_entry_list_iv_debt_dec"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:layout_gravity="start"
-            android:layout_marginStart="50dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginBottom="10dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:contentDescription="@string/iv_desc_dec_debt"
@@ -89,10 +90,11 @@
 
         <ImageView
             android:id="@+id/activity_entry_list_iv_debt_inc"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
             android:layout_gravity="end"
-            android:layout_marginEnd="50dp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginBottom="10dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:contentDescription="@string/iv_desc_inc_debt"
@@ -116,9 +118,9 @@
             android:id="@+id/activity_entry_list_tv_msg_empty_list"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/tv_msg_empty_list"
             android:layout_gravity="center"
-            android:textSize="32sp"/>
+            android:text="@string/tv_msg_empty_list"
+            android:textSize="32sp" />
 
     </FrameLayout>
 
