--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,10 +11,10 @@
     <color name="colorInactiveButtonBackground">#BEBFBF</color>
     <color name="colorInactiveButtonText">#2E2929</color>
 
-    <color name="colorDarkText">#BEBEBE</color>
-    <color name="colorLightText">@color/colorPrimary</color>
+    <color name="colorItemAmountText">#636363</color>
+    <color name="colorInactiveText">#BEBEBE</color>
+    <color name="colorActiveText">@color/colorPrimary</color>
 
-    <color name="colorWhite">#FFFFFF</color>
     <color name="colorBlack">#000000</color>
     <color name="colorGray">#DFDFDF</color>
     <color name="colorLightGray">#E2E2E2</color>
