--- a/app/src/main/res/layout/activity_entry_list_view.xml
+++ b/app/src/main/res/layout/activity_entry_list_view.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center"
     android:background="@color/colorPrimary"
     android:orientation="vertical"
-    tools:context=".ActivityEntryList">
+    tools:context=".ActivityEntryListView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
