adjusted Russian Localization.

--- a/app/src/main/res/layout/dialog_person_add.xml
+++ b/app/src/main/res/layout/dialog_person_add.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="5dp"
-        android:text="@string/tv_i_owe"
+        android:text="@string/tv_i_take"
         android:textAlignment="textEnd"
         android:textAllCaps="true"
         android:textColor="@color/colorActiveText"
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="6dp"
-        android:text="@string/tv_owes_me"
+        android:text="@string/tv_i_give"
         android:textAlignment="textStart"
         android:textAllCaps="true"
         android:textColor="@color/colorInactiveText"
