--- a/app/src/main/res/layout/activity_entry_list_view.xml
+++ b/app/src/main/res/layout/activity_entry_list_view.xml
@@ -47,6 +47,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textAllCaps="true"
             android:layout_marginTop="20dp"
             android:textColor="@color/colorAccent"
             android:textSize="16sp"
